microservices/my-tube/mytube-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: LoadBalancer
  selector:
    app: mytube
    service: streaming
  ports:
  - port: 80
    targetPort: 4002
