microservices/my-tube/mytube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytube-ingress
  labels:
    name: mytube-ingress
spec:
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/video"
        backend:
          service:
            name: streaming
            port: 
              number: 4002
      - pathType: Prefix
        path: "/storage"
        backend:
          service:
            name: storage
            port: 
              number: 27017
